--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBB 8748/PBB 8748.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBB 8748/PBB 8748.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET AVEO ACTIVO 1.6L 4P AC</h1>
-            <p class="precio">$6,900</p>
+            <h1>VOLKSWAGEN JETTA TRENDLINE 2.0 4P 9M24H4</h1>
+            <p class="precio">$7,900</p>
             <div class="detalles">
-                <span>2011</span>
-                <span>266 Kms</span>
+                <span>2008</span>
+                <span>265 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -75,12 +75,12 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Chevrolet
+                    <span class="info-value">Volkswagen
                     </span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">Aveo Activo 1.6L 4P</span>
+                    <span class="info-value">JETTA TRENDLINE 2.0 4P 9M24H4</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -92,11 +92,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">266,000 km</span>
+                    <span class="info-value">265,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2011</span>
+                    <span class="info-value">2008</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -116,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Aveo Activo 1.6L 4P (2011) es un sedán económico con motor 1.6L de gasolina, transmisión manual y aire acondicionado. Versión "Activo" con detalles deportivos en el diseño.</p>
+            <p>El Volkswagen Jetta Trendline 2.0 4P es un sedán ejecutivo con motor 2.0L (115-120 HP), transmisión manual y equipamiento básico. Versión "Trendline" incluye aire acondicionado y detalles de seguridad.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/AVEO ACTIVO 2011.mp4" type="video/mp4">
+                        <source src="imgs/JETTA.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
