--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBC 1740/PBC 1740.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBC 1740/PBC 1740.html
@@ -50,21 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>LANDWIND X2 DELUXE AC 1.6 5P 4X2 TM</h1>
-            <p class="precio">$8,900</p>
+            <h1>CHEVROLET AVEO EMOTION 1.6L STD</h1>
+            <p class="precio">$7,000</p>
             <div class="detalles">
-                <span>2019</span>
-                <span>113,000 Kms</span>
-                <span>Placa: G</span>
+                <span>2008</span>
+                <span>198,000 Kms</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Landwind</span>
+                    <span class="info-value">Chevrolet</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">X2 DELUXE AC 1.6 5P 4X2 TM</span>
+                    <span class="info-value">AVEO EMOTION 1.6L STD</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">Sedán</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">113,000 km</span>
+                    <span class="info-value">198,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2019</span>
+                    <span class="info-value">2008</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,11 +103,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">PLOMO</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Guayas</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Landwind X2 Deluxe AC 1.6 5P 4x2 TM es un SUV urbano compacto, con motor 1.6L de gasolina, transmisión manual y tracción delantera. Ofrece comodidad y estilo en un diseño moderno de 5 puertas.</p>
+            <p>El Chevrolet Aveo Emotion 1.6L 2008 es un sedán compacto con motor 1.6L (103 HP), transmisión manual y equipamiento básico (STD). Versión "Emotion" con detalles estéticos deportivos, ideal para uso urbano.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/GCA 6710.mp4" type="video/mp4">
+                        <source src="imgs/EMOTION.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
