--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDB 9229/PDB 9229.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDB 9229/PDB 9229.html
@@ -50,22 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 5PAS 1.1</h1>
-            <p class="precio">$6,600</p>
+            <h1>MAZDA5 2.0 MT FULL</h1>
+            <p class="precio">$7,000</p>
             <div class="detalles">
-                <span>2012</span>
-                <span>204,000 Kms</span>
+                <span>2007</span>
+                <span>230,000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/11111.png" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/22222.png" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/3333.png" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/4444.png" alt="Imagen 4" class="carrusel-img">
-            <img src="imgs/5555.png" alt="Imagen 5" class="carrusel-img">
+            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto4.jpeg" alt="Imagen 4" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,12 +75,12 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Hyundai
+                    <span class="info-value">Mazda
                     </span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 5PAS 1.1</span>
+                    <span class="info-value">MAZDA5 2.0 MT FULL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -89,15 +88,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Hatchback</span>
+                    <span class="info-value">Monovolumen</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">204,000 km</span>
+                    <span class="info-value">230,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2012</span>
+                    <span class="info-value">2007</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -105,7 +104,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Blanco</span>
+                    <span class="info-value">Morado</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -117,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 es un hatchback urbano compacto con motor 1.1L de gasolina (66 HP), transmisión manual y capacidad para 5 pasajeros. Destaca por su maniobrabilidad y bajo consumo.</p>
+            <p>El Mazda5 2.0 2007 es un monovolumen familiar con motor 2.0L (147 HP), transmisión manual y equipamiento "Full" (aire acondicionado, elevalunas eléctricos, etc.). Destaca por sus puertas corredizas y versatilidad interior.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -127,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/hyundai i10.mp4" type="video/mp4">
+                        <source src="imgs/mazda 6.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
