--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDX6400/PDX 6400.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDX6400/PDX 6400.html
@@ -51,10 +51,10 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>KIA SOLUTO LX 1.4 4P 4X2 TM</h1>
-            <p class="precio">$9,200</p>
+            <p class="precio">$13,000</p>
             <div class="detalles">
                 <span>2023</span>
-                <span>30,000 Kms</span>
+                <span>60,000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -63,9 +63,8 @@
         <div class="carrusel">
             <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO6.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -92,7 +91,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">30,000 km</span>
+                    <span class="info-value">60,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -126,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/KIA SONATO.mp4" type="video/mp4">
+                        <source src="imgs/kia soluto.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
