--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCR 7330/PCR 7330.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCR 7330/PCR 7330.html
@@ -61,10 +61,10 @@
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1..jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/aveo 2016.mp4" type="video/mp4">
+                        <source src="imgs/2016.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
