--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/LBA 8706/LBA 8706.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/LBA 8706/LBA 8706.html
@@ -50,12 +50,12 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>LANDWIND X2 DELUXE AC 1.6 5P 4X2 TM</h1>
-            <p class="precio">$8,900</p>
+            <h1>RENAULT SANDERO 1.6 MT EXPRESSION</h1>
+            <p class="precio">$5,900</p>
             <div class="detalles">
-                <span>2019</span>
-                <span>113,000 Kms</span>
-                <span>Placa: G</span>
+                <span>2011</span>
+                <span>225,000 Kms</span>
+                <span>Placa: L</span>
             </div>
         </div>
 
@@ -75,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Landwind</span>
+                    <span class="info-value">Renault</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">X2 DELUXE AC 1.6 5P 4X2 TM</span>
+                    <span class="info-value">SANDERO 1.6 MT EXPRESSION</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">113,000 km</span>
+                    <span class="info-value">225,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2019</span>
+                    <span class="info-value">2011</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Guayas</span>
+                    <span class="info-value">Loja</span>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Landwind X2 Deluxe AC 1.6 5P 4x2 TM es un SUV urbano compacto, con motor 1.6L de gasolina, transmisión manual y tracción delantera. Ofrece comodidad y estilo en un diseño moderno de 5 puertas.</p>
+            <p>El Renault Sandero 1.6 Expression 2011 es un hatchback compacto con motor 1.6L (103 HP), transmisión manual y equipamiento intermedio. Ideal para ciudad, ofrece espacio y bajo costo de mantenimiento.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/GCA 6710.mp4" type="video/mp4">
+                        <source src="imgs/sandero.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
