--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCE 4497/PCE 4497.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCE 4497/PCE 4497.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET AVEO FAMILY STD TM 1.5 4P 4X2</h1>
-            <p class="precio">$6,800</p>
+            <h1>PEUGEOT 207 COMPACT URB TM 1.4 5P 4X2</h1>
+            <p class="precio">$7,000</p>
             <div class="detalles">
                 <span>2013</span>
-                <span>172,000 Kms</span>
+                <span>65,000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -75,12 +75,12 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Chevrolet
+                    <span class="info-value">Peugeot
                     </span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">Aveo Family STD TM 1.5 4P 4x2</span>
+                    <span class="info-value">207 COMPACT URB TM 1.4 5P 4X2</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -88,11 +88,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Sedán</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">172,000 km</span>
+                    <span class="info-value">65,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Rojo</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -116,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Aveo Family STD TM 1.5 4P 4x2 es un sedán compacto y práctico, con motor 1.5L de gasolina y transmisión manual. Ideal para familias, ofrece confort y eficiencia en un diseño moderno.</p>
+            <p>El Peugeot 207 Compact URB 1.4 2013 es un hatchback urbano con motor 1.4L (75 HP), transmisión manual y equipamiento básico. Versión "URB" enfocada en economía y maniobrabilidad para ciudad.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/PCD 5340.mp4" type="video/mp4">
+                        <source src="imgs/2013.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
