--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBC 1740/PBC 1740.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBC 1740/PBC 1740.html
@@ -61,10 +61,10 @@
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO4.jpeg" alt="Imagen 4" class="carrusel-img">
+            <img src="imgs/111.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/2222.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/333.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/4444.jpeg" alt="Imagen 4" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
