--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PZG 0755/PZG 0755.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PZG 0755/PZG 0755.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET SPARK GT AC 1.2 5P 4X2 TM</h1>
-            <p class="precio">$8,900</p>
+            <h1>CHEVROLET CHEVITAXY 1.5L</h1>
+            <p class="precio">$4.900</p>
             <div class="detalles">
-                <span>2019</span>
-                <span>117,000 Kms</span>
+                <span>2008</span>
+                <span>157,000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -64,7 +64,7 @@
             <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto4.jpeg" alt="Imagen 4" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">SPARK GT AC 1.2 5P 4X2 TM</span>
+                    <span class="info-value">Chevitaxy 1.5L</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Hatchback </span>
+                    <span class="info-value">Sedán</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">117,000 km</span>
+                    <span class="info-value">157,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2019</span>
+                    <span class="info-value">2008</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Spark GT 1.2L es un hatchback deportivo con motor 1.2L (82 HP), transmisión manual y aire acondicionado. Versión "GT" con detalles estéticos deportivos (alerón, llantas de aleación) y respuesta ágil para ciudad.</p>
+            <p>Taxi basado en Corsa Classic 1.5L. Motor 8V sencillo pero resistente. Modificado con A/C reforzado y asientos de vinilo. Ideal para ciudad</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/spark gt rojo.mp4" type="video/mp4">
+                        <source src="imgs/chevitaxy.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -164,11 +164,12 @@
                         <a href="https://www.tiktok.com/@gavilmotors_promos" class="btn-contacto" target="_blank">
                             <i class="bi bi-tiktok"></i> GAVIL MOTORS PROMOS
                         </a>
-    <a href="#" class="btn-contacto" id="btnAcceso">
+                        <!-- Botón de acceso (mantén el que ya tienes) -->
+<a href="#" class="btn-contacto" id="btnAcceso">
     <i class="bi bi-shield-fill-exclamation"></i> Consultas (solo personal autorizado)
 </a>
 
-                        <!-- Modal para datos pendientes (añade esto con tus otros modals) -->
+<!-- Modal para datos pendientes (añade esto con tus otros modals) -->
 <div id="modal-pendientes" class="modal">
     <div class="modal-contenido" style="max-width: 600px;">
         <span class="cerrar">&times;</span>
@@ -179,11 +180,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">3 multas</span>
+                    <span class="dato-value">Al día</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$90.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -193,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2022</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$239.31</span>
+                    <span class="dato-value">$127.98</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Esmeraldas - Quininde</span>
+                    <span class="dato-value">Atacames - Esmeraldas</span>
                 </div>
             </div>
         </div>
@@ -211,11 +212,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Calendarizacion y no se presento</span>
+                    <span class="dato-value">Impuestos 2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$386.00</span>
+                    <span class="dato-value">$75.00</span>
                 </div>
             </div>
         </div>
