--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -70,6 +70,9 @@
                 <span>• HYUNDAI SONATA •</span>
                 <span>• NISSAN FRONTIER •</span>
                 <span>• NISSAN TIIDA •</span>
+                <span>• CHERY TIGGO •</span>
+                <span>• KIA STONIC •</span>
+                <span>• AVEO FAMILY •</span>
             </div>
         </div>
     </section>  
@@ -84,40 +87,40 @@
         <div class="coleccion-grid">
             <!-- Tarjeta 1 -->
             <div class="auto-card">
-                <div class="auto-imagen" style="background-image: url('categorias/SPARK\ ROJOO.jpeg')">
+                <div class="auto-imagen" style="background-image: url('categorias/STONIC.jpeg')">
 
                     <div class="auto-badge">NUEVO INGRESO</div>
                 </div>
                 <div class="auto-info">
-                    <h3>CHEVROLET SPARK GT 2019</h3>
+                    <h3>KIA STONIC LX AC 1.0</h3>
                     <div class="auto-especificaciones">
-                        <span><i class="fas fa-tachometer-alt"></i> 117,000 km</span>
-                        <span><i class="fas fa-horse-head"></i> 98 HP</span>
+                        <span><i class="fas fa-tachometer-alt"></i> 94,000 km</span>
+                        <span><i class="fas fa-horse-head"></i> 120 HP</span>
                     </div>
                     <div class="auto-precio">
-                        <span class="precio-anterior">$9.200 USD</span>
-                        <span class="precio-actual">$8.900 USD</span>
+                        <span class="precio-anterior">$15.450 USD</span>
+                        <span class="precio-actual">$13.000 USD</span>
                     </div>
-                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PDD 4350/PDD 4350.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
+                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PDT 4210/PDT 4210.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
             <!-- Tarjeta 2 -->
             <div class="auto-card destacado">
-                <div class="auto-imagen" style="background-image: url('categorias/SZ.jpg')">
+                <div class="auto-imagen" style="background-image: url('categorias/tiggo2.jpeg')">
                     <div class="auto-badge">MÁS VENDIDO</div>
                 </div>
                 <div class="auto-info">
-                    <h3>SUZUKI GRAND VITARA SZ</h3>
+                    <h3>CHERY A13T TIGGO2</h3>
                     <div class="auto-especificaciones">
-                        <span><i class="fas fa-tachometer-alt"></i> 267.000 km</span>
-                        <span><i class="fas fa-horse-head"></i> 185 HP</span>
+                        <span><i class="fas fa-tachometer-alt"></i> 140.000 km</span>
+                        <span><i class="fas fa-horse-head"></i> 113 HP</span>
                     </div>
                     <div class="auto-precio">
-                        <span class="precio-anterior">$7.700 USD</span>
-                        <span class="precio-actual">$6.900 USD</span>
+                        <span class="precio-anterior">$10.999 USD</span>
+                        <span class="precio-actual">$9.900 USD</span>
                     </div>
-                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PBF 1921/PBF 1921.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
+                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/ABH 3184/ABH 3184.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
