--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
+    <!-- Favicon estándar (recomendado para máxima compatibilidad) -->
+<link rel="icon" href="categorias/logo-icon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Hero con Video de Fondo -->
@@ -144,8 +146,16 @@
                 </ul>
             </div>
             <div class="experiencia-imagen">
-                <img src="https://images.unsplash.com/photo-1601362840469-51e4d8d58785?ixlib=rb-4.0.3" alt="Experiencia Élite">
-            </div>
+    <div class="auto-imagen" 
+         style="background-image: url('categorias/logo1.png '); 
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+                width: 100%;  /* Ocupa todo el ancho disponible */
+                height: 400px; /* Ajusta este valor para hacerlo más grande */
+                ">
+    </div>
+</div>
         </div>
     </section>
 
