--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCK 6256/PCK 6256.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCK 6256/PCK 6256.html
@@ -51,10 +51,10 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>CHEVROLET LUV D-MAX C/D DIESEL 4X2 T/M LIMITED EDITION</h1>
-            <p class="precio">$7,000</p>
+            <p class="precio">$10,500</p>
             <div class="detalles">
-                <span>2006</span>
-                <span>315 Kms</span>
+                <span>2014</span>
+                <span>193 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -65,6 +65,7 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,11 +76,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Chevrolet</span>
+                    <span class="info-value">Renault</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">LUV D-MAX C/D DIESEL 4X2 T/M LIMITED EDITION</span>
+                    <span class="info-value">DUSTER EXPRESSION AC 2.0 5P 4X2 TM</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +88,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">pickup</span>
+                    <span class="info-value">SUV</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">315,000 km</span>
+                    <span class="info-value">193,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2006</span>
+                    <span class="info-value">2014</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,7 +104,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">Crema</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -115,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Aveo Family 1.5 2014 es un sedán compacto con motor 1.5L (107 HP), transmisión manual y equipamiento básico (STD). Ideal para familias, ofrece espacio en maletero (420L) y bajo consumo.</p>
+            <p>El Renault Duster Expression 2.0 2014 es un SUV económico con motor 2.0L (143 HP), transmisión manual y tracción delantera. Versión "Expression" incluye aire acondicionado, dirección asistida y diseño robusto para ciudad o caminos rurales.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/DMAX.mp4" type="video/mp4">
+                        <source src="imgs/DUSTER.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -198,7 +199,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">SIN SISTEMA EN TODO</span>
+                    <span class="dato-value">$82.77</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
@@ -240,7 +241,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">3 dueños</span>
                 </div>
             </div>
         </div>
