--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCK 6256/PCK 6256.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCK 6256/PCK 6256.html
@@ -50,7 +50,7 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET LUV D-MAX C/D DIESEL 4X2 T/M LIMITED EDITION</h1>
+            <h1>RENAULT DUSTER EXPRESSION AC 2.0 5P 4X2 TM</h1>
             <p class="precio">$10,500</p>
             <div class="detalles">
                 <span>2014</span>
